# oss2025-multimodeleval

./: .gitignore  README.md  app.py  eval_custom.py  eval_retrieval.py  pyproject.toml
data/example/: corpus.jsonl  qrels.tsv  queries.jsonl
