[project]
name = "oss2025-multimodeleval"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mteb>=2.3.4",
    "ruff>=0.14.8",
    "sentence-transformers>=4.1.0",
    "transformers>=4.48.0",
    "torch>=2.5.0",
    "accelerate>=1.0.0",
    "pandas>=2.0.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "tabulate>=0.9.0",
    "streamlit>=1.40.0",
    "plotly>=5.24.0",
    "sentencepiece>=0.2.0",
]
